--- a/estilo/style.css
+++ b/estilo/style.css
@@ -15,9 +15,10 @@
 }
 
 body, html {
-    background-color: #5f2c82;
     height: 100vh;
     width: 100vw;
+    background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    
 }
 
 main {
@@ -37,6 +38,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width .5s, height .5s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
