--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) {  
+@media screen and (min-width: 768px) and (max-width: 992px) {  
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
@@ -37,5 +37,13 @@
     section#login > div#formulario {
         float: right;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+    
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
