--- a/estilo/style.css
+++ b/estilo/style.css
@@ -64,3 +64,48 @@ div#formulario > h1 {
 div#formulario > p {
     font-size: 0.8em;
 }
+
+form > div.campo {
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    background-color: #49a09d;
+    color: white;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #387a78;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #76fffa3a;
+    border-radius: 7px;
+    padding-top: 5px;
+}
+
+form > a.botao:hover {
+    background-color: #5fccc83a;
+}
+
+form > a.botao > i {
+    font-size: 0.8em;
+}
